# apsg

./: .gitignore  CMakeLists.txt  LMSPage.qml  LMSPageForm.ui.qml  RLSPageForm.ui.qml  algorithm.h  apsg.cc  apsg.h  apsgError.h  armadillo-7.950.0.tar.xz  lms.cc  lms.h  main.cc  main.qml  plot.cc  plot.h  qml.qrc  rls.cc  rls.h
armadillo-7.950.0/: ArmadilloConfig.cmake  CMakeCache.txt  cmake_install.cmake  install_manifest.txt
armadillo-7.950.0/tmp/include/armadillo_bits/: config.hpp
armadillo-7.950.0/tmp/misc/: armadillo.pc
ui/: APSGPage.qml  LMSPage.qml  LMSPageForm.ui.qml  LMSPopup.qml  PlotView.qml  RLSPage.qml  RLSPopup.qml  main.qml  qtquickcontrols2.conf
